--- a/index.html
+++ b/index.html
@@ -248,16 +248,16 @@
                   </div>
 
                   <h3 class="skills__name">Figma</h3>
-                  <span class="skills__subtitle">Dasar</span>
+                  <span class="skills__subtitle">Menengah</span>
                 </div>
 
                 <!-- Skills 4 -->
                 <div class="skills__data">
                   <div class="skills__blob">
-                    <img src="gambar/corel.png" alt="gambar_skills" />
+                    <img src="gambar/vscode.png" alt="gambar_skills" />
                   </div>
 
-                  <h3 class="skills__name">CorelDraw</h3>
+                  <h3 class="skills__name">VsCode</h3>
                   <span class="skills__subtitle">Menengah</span>
                 </div>
               </div>
@@ -289,7 +289,7 @@
 
           <!-- gambar 4 -->
           <div class="portofolio__img">
-            <img src="gambar/Ilustrasi/desain 3.png" alt="Gambar 1" />
+            <img src="gambar/15.PNG" alt="Gambar 1" />
           </div>
         </div>
 
@@ -312,7 +312,7 @@
 
           <!-- gambar 8 -->
           <div class="portofolio__img-land">
-            <img src="gambar/Ilustrasi/halaman.png" alt="Gambar 1" />
+            <img src="gambar/web.png" alt="Gambar 1" />
           </div>
 
           <!-- gambar 9 -->
