--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   </div>
 
                   <h5 class="skills__name">Desain UI</h5>
-                  <span class="skills__subtitle">Dasar</span>
+                  <span class="skills__subtitle">Menengah</span>
                 </div>
 
                 <!-- Skills 3 -->
@@ -209,6 +209,16 @@
 
                   <h3 class="skills__name">Illustrasi</h3>
                   <span class="skills__subtitle">Lanjutan</span>
+                </div>
+
+                <!-- Skills 4 -->
+                <div class="skills__data">
+                  <div class="skills__blob">
+                    <img src="gambar/programming.jpg" alt="gambar_skills" />
+                  </div>
+
+                  <h3 class="skills__name">Website</h3>
+                  <span class="skills__subtitle">Dasar</span>
                 </div>
               </div>
             </div>
