--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
               <div class="banner__text">
                 <h6 class="title">Halo Semua 👋, saya</h6>
                 <h2>Aldy Dwi Nur Ardiansyah</h2>
-                <h5>Desainer Grafis</h5>
+                <h5>Desainer Grafis Dan Programmer</h5>
                 <p>
-                  Saya seorang desainer grafis dari Indonesia, saya sangat
+                  Saya seorang desainer grafis dan programmer dari Indonesia,
+                  saya sangat
                   <br />bersemangat dan berdedikasi untuk pekerjaan saya.
                 </p>
                 <div class="about__social">
@@ -145,15 +146,14 @@
               </div>
               <div class="about__text">
                 <h3 class="judul_about">
-                  Saya Dapat Mendesain Apapun yang Anda Inginkan
+                  Saya Dapat Mengerjakan Apapun yang Anda Inginkan
                 </h3>
                 <p>
-                  saya seorang desainer grafis, saya sangat bersemangat dan
-                  berdedikasi pada pekerjaan saya. Dengan pengalaman 2 tahun
-                  sebagai desainer grafis, saya telah memperoleh keterampilan
-                  dan pengetahuan yang diperlukan untuk membuat proyek Anda
-                  sukses. Saya menikmati setiap langkah dari proses desain,
-                  mulai dari diskusi dan kolaborasi.
+                  saya seorang desainer grafis dan programmer, saya sangat
+                  bersemangat dan berdedikasi pada pekerjaan saya. Saya telah
+                  memperoleh keterampilan dan pengetahuan yang diperlukan untuk
+                  membuat proyek Anda sukses. Saya menikmati setiap langkah dari
+                  proses pekerjaan saya, mulai dari diskusi dan kolaborasi.
                 </p>
               </div>
             </div>
@@ -168,7 +168,7 @@
         </svg>
       </section>
       <!-- Akhir About -->
-
+      
       <!-- Skills -->
       <section class="skills section" id="skills">
         <h1 class="section__title">Skills</h1>
